DROP TABLE Participant;
DROP TABLE Exam;
DROP TABLE ExamRole;
DROP TABLE Room;
DROP TABLE RoomType;
DROP TABLE Competence;
DROP TABLE Person;
DROP TABLE Class;
DROP TABLE Subject;
DROP TABLE LogTable;

CREATE TABLE Subject
(
    id   NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_subject PRIMARY KEY (id),

    name VARCHAR2(100) NOT NULL UNIQUE
);

CREATE TABLE Class
(
    id   NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_class PRIMARY KEY (id),

    name VARCHAR2(100) NOT NULL UNIQUE
);

CREATE TABLE Person
(
    id        NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_person PRIMARY KEY (id),

    firstname VARCHAR2(100) NOT NULL,
    lastname  VARCHAR2(100) NOT NULL,

    class_id  NUMBER,
    CONSTRAINT fk_person_class FOREIGN KEY (class_id) REFERENCES Class (id)
);

CREATE TABLE Competence
(
    id          NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_competence PRIMARY KEY (id),

    description VARCHAR2(100) NOT NULL,

    person_id   NUMBER,
    CONSTRAINT fk_competence_person
        FOREIGN KEY (person_id) REFERENCES Person (id),

    subject_id  NUMBER,
    CONSTRAINT fk_competence_subject
        FOREIGN KEY (subject_id) REFERENCES Subject (id)
);

CREATE TABLE RoomType
(
    id        NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_room_type PRIMARY KEY (id),

    room_type VARCHAR2(100) NOT NULL UNIQUE
);

CREATE TABLE Room
(
    id          NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_room PRIMARY KEY (id),

    designation VARCHAR2(100) NOT NULL UNIQUE,

    type_id     NUMBER        NOT NULL,
    CONSTRAINT fk_room_room_type FOREIGN KEY (type_id) REFERENCES RoomType (id)
);

CREATE TABLE ExamRole
(
    id   NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_exam_role PRIMARY KEY (id),

    role VARCHAR2(100) NOT NULL UNIQUE
);

CREATE TABLE Exam
(
    id         NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    CONSTRAINT pk_exam PRIMARY KEY (id),

    title      VARCHAR2(100) NOT NULL,
    exam_date  TIMESTAMP     NOT NULL,

    subject_id NUMBER        NOT NULL,
    CONSTRAINT fk_exam_subject FOREIGN KEY (subject_id) REFERENCES Subject (id),

    room_id    NUMBER,
    CONSTRAINT fk_exam_room FOREIGN KEY (room_id) REFERENCES Room (id)
);

CREATE TABLE Participant
(
    exam_id      NUMBER,
    CONSTRAINT fk_participant_exam FOREIGN KEY (exam_id) REFERENCES Exam (id),

    person_id    NUMBER,
    CONSTRAINT fk_participant_person FOREIGN KEY (person_id) REFERENCES Person (id),

    exam_role_id NUMBER,
    CONSTRAINT fk_participant_exam_role FOREIGN KEY (exam_role_id) REFERENCES ExamRole (id),

    CONSTRAINT pk_participant PRIMARY KEY (exam_id, person_id, exam_role_id),

    score        NUMBER
);
CREATE TABLE LogTable
(
    log_id            NUMBER GENERATED BY DEFAULT ON NULL AS IDENTITY,
    event_type        VARCHAR2(20)  NOT NULL,
    event_description VARCHAR2(255) NOT NULL,
    event_timestamp   TIMESTAMP DEFAULT SYSTIMESTAMP,
    db_user           varchar2(100) not null,
    Constraint pk_logTable PRIMARY KEY (log_id)
);
Create or REPLACE TYPE TestResultType AS OBJECT
(
    firstname VARCHAR2(100),
    lastname  VARCHAR2(100),
    score     NUMBER
);
CREATE OR REPLACE TYPE PersonRoleType AS OBJECT
(
    firstname VARCHAR2(100),
    lastname  VARCHAR2(100),
    RoleName   VARCHAR2(50)
);
CREATE OR REPLACE TYPE PersonWithID AS OBJECT
(
    firstname VARCHAR2(100),
    lastname  VARCHAR2(100),
    id        NUMBER
)
